Adding Marten and docker-compose for CatalogDb(postgres) and logic to create new product

--- a/src/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Catalog/Catalog.API/Catalog.API.csproj
@@ -7,10 +7,12 @@
     <UserSecretsId>34029a0a-1237-4def-9970-6b64dcd12256</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
 	  <PackageReference Include="Carter" Version="8.0.0" />
+	  <PackageReference Include="Marten" Version="7.7.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
 
