--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -16,7 +16,12 @@ services:
             context: .
             dockerfile: Catalog/Catalog.API/Dockerfile
 
+    basket.api:
+        image: ${DOCKER_REGISTRY-}basketapi
+        build:
+            context: .
+            dockerfile: Basket/Basket.API/Dockerfile
+
 volumes:
     postgres_catalog:
     postgres_basket:
-        
