--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -22,6 +22,12 @@ services:
             context: .
             dockerfile: Basket/Basket.API/Dockerfile
 
+    discount.grpc:
+        image: ${DOCKER_REGISTRY-}discountgrpc
+        build:
+            context: .
+            dockerfile: Discount/Discount.Grpc/Dockerfile
+
 volumes:
     postgres_catalog:
     postgres_basket:
