Adding Configuration files for all models and configuring connection string for database

--- a/src/Ordering/Ordering.API/appsettings.json
+++ b/src/Ordering/Ordering.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=Orderdb;User Id=sa;Password=12345!SenhaDificl#;Encrypt=False;TrustServerCertificate=True"
+  }
 }
