Adding container for sql server datbase and executing migrations

--- a/src/Ordering/Ordering.API/appsettings.json
+++ b/src/Ordering/Ordering.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Server=localhost;Database=Orderdb;User Id=sa;Password=12345!SenhaDificl#;Encrypt=False;TrustServerCertificate=True"
+    "Database": "Server=localhost,1433;Database=Orderdb;User Id=sa;Password=12345!SenhaDificil#;Encrypt=False;TrustServerCertificate=True"
   }
 }
