--- a/src/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/src/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -11,4 +11,12 @@
     <ProjectReference Include="..\Ordering.Domain\Ordering.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Orders\Commands\" />
+    <Folder Include="Orders\EventHandlers\Domain\" />
+    <Folder Include="Orders\EventHandlers\Integration\" />
+    <Folder Include="Orders\Queries\" />
+  </ItemGroup>
+
 </Project>
