--- a/src/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/src/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -12,11 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Orders\Commands\" />
     <Folder Include="Orders\EventHandlers\Domain\" />
     <Folder Include="Orders\EventHandlers\Integration\" />
     <Folder Include="Orders\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
