Creating Extensions method for Messaging Building Blocks in order to easily integrate it with other services

--- a/src/Ordering/Ordering.API/appsettings.json
+++ b/src/Ordering/Ordering.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Database": "Server=localhost,1433;Database=Orderdb;User Id=sa;Password=12345!SenhaDificil#;Encrypt=False;TrustServerCertificate=True"
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
