--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -74,6 +74,9 @@ services:
             - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
             - ConnectionStrings__Redis=distributedcache:6379
             - GrpcSettings__DiscountUrl=https://discount.grpc:8081
+            - MessageBroker__Host=amqp://ecommerce-mq:5672
+            - MessageBroker__UserName=guest
+            - MessageBroker__Password=guest
         ports:
             - "6001:8080"
             - "6061:8081"
@@ -84,6 +87,7 @@ services:
             - basketdb
             - distributedcache
             - discount.grpc
+            - messagebroker
 
     discount.grpc:
         environment:
@@ -97,3 +101,23 @@ services:
         volumes:
             - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
             - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+    ordering.api:
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - ASPNETCORE_HTTP_PORTS=8080
+            - ASPNETCORE_HTTPS_PORTS=8081
+            - ConnectionStrings__Database=Server=orderdb,1433;Database=Orderdb;User Id=sa;Password=12345!SenhaDificil#;Encrypt=False;TrustServerCertificate=True
+            - MessageBroker__Host=amqp://ecommerce-mq:5672
+            - MessageBroker__UserName=guest
+            - MessageBroker__Password=guest
+            - FeatureManagement__OrderFullfilment=false
+        ports:
+            - "6003:8080"
+            - "6063:8081"
+        volumes:
+            - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+            - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+        depends_on:
+            - orderdb
+            - messagebroker
