Adding YarpGateway API and configuring it as a reverse proxy for all services. Adding docker-compose support for YarpGateway

--- a/src/Discount/Discount.Grpc/Discount.Grpc.csproj
+++ b/src/Discount/Discount.Grpc/Discount.Grpc.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>9b25d08b-1533-4899-95f3-32e4be5a5e18</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
