--- a/src/Ordering/Ordering.API/Ordering.API.csproj
+++ b/src/Ordering/Ordering.API/Ordering.API.csproj
@@ -7,6 +7,7 @@
 		<UserSecretsId>f52005aa-a2ca-4a55-947b-f48d81e8385e</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<DockerfileContext>..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
