--- a/src/Basket/Basket.API/Basket.API.csproj
+++ b/src/Basket/Basket.API/Basket.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>24233919-6a21-49f4-9800-8be070c84e6c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
