--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,45 +1,53 @@
 version: '3.4'
 
 services:
-    catalogdb:
-        image: postgres
+  catalogdb:
+    image: postgres
+  
+  basketdb:
+    image: postgres
 
-    basketdb:
-        image: postgres
+  distributedcache:
+    image: redis
 
-    distributedcache:
-        image: redis
+  orderdb:
+    image: mcr.microsoft.com/mssql/server
 
-    orderdb:
-        image: mcr.microsoft.com/mssql/server
+  messagebroker:
+    image: rabbitmq:management
 
-    messagebroker:
-        image: rabbitmq:management
+  catalog.api:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: Catalog/Catalog.API/Dockerfile
 
-    catalog.api:
-        image: ${DOCKER_REGISTRY-}catalogapi
-        build:
-            context: .
-            dockerfile: Catalog/Catalog.API/Dockerfile
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Basket/Basket.API/Dockerfile
 
-    basket.api:
-        image: ${DOCKER_REGISTRY-}basketapi
-        build:
-            context: .
-            dockerfile: Basket/Basket.API/Dockerfile
 
-    discount.grpc:
-        image: ${DOCKER_REGISTRY-}discountgrpc
-        build:
-            context: .
-            dockerfile: Discount/Discount.Grpc/Dockerfile
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Discount/Discount.Grpc/Dockerfile
 
-    ordering.api:
-        image: ${DOCKER_REGISTRY-}orderingapi
-        build:
-            context: .
-            dockerfile: Ordering/Ordering.API/Dockerfile
+
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: Ordering/Ordering.API/Dockerfile
+
+  yarpapigateway:
+    image: ${DOCKER_REGISTRY-}yarpapigateway
+    build:
+      context: .
+      dockerfile: ApiGateways/YarpApiGateway/Dockerfile
 
 volumes:
-    postgres_catalog:
-    postgres_basket:
+  postgres_catalog:
+  postgres_basket:
